Fix bottom margin on mpu ads being ever so slightly too much.

--- a/app/assets/stylesheets/_globalnav/_core/_ads.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_ads.sass
@@ -94,7 +94,7 @@
 
 .ad-mpu.card__content
   @extend %ad-mpu
-  margin-bottom: 15px
+  margin-bottom: 13px
   .homepage &
     +box-sizing()
     margin-bottom: 0
